--- a/.github/workflows/daily_key.yml
+++ b/.github/workflows/daily_key.yml
@@ -26,7 +26,7 @@ jobs:
         fi
         
         # Tạo key cho NGÀY MAI (theo giờ Việt Nam)
-        TOMORROW=$(date -d "+1 day" +%Y%m%d)
+        TOMORROW=$(date +%Y%m%d)
         RAW_KEY="comment_${TOMORROW}_$(openssl rand -hex 6 | tr '[:lower:]' '[:upper:]')"
         
         # Lấy link từ một dịch vụ pastebin (ví dụ: paste.ee)
