--- a/.github/workflows/daily_key.yml
+++ b/.github/workflows/daily_key.yml
@@ -58,4 +58,28 @@
         git config user.email "actions@github.com"
         git add daily-key_comment.json
         git commit -m "Auto: Encrypted daily key for $TOMORROW"
+        git push        # Nếu nó trả về JSON, mày phải tự sửa lại lệnh grep/cut như tao nói lần trước.
+        SHORT_URL="$RESPONSE"
+
+        # Fallback nếu API rút gọn lỗi hoặc trả về chuỗi rác
+        if [ -z "$SHORT_URL" ] || [[ "$SHORT_URL" == *"error"* ]] || [[ "$SHORT_URL" == *"Error"* ]]; then
+          echo "Lỗi: Không rút gọn được link qua Yeumoney, dùng link gốc."
+          SHORT_URL=$PASTE_URL
+        fi
+        
+        # Chuẩn bị dữ liệu JSON ở dạng text thường
+        PLAINTEXT_JSON="{\"key\":\"$RAW_KEY\",\"date\":\"$TOMORROW\",\"short_url\":\"$SHORT_URL\"}"
+
+        # --- BẮT ĐẦU MÃ HÓA DỮ LIỆU ---
+        IV=$(openssl rand -hex 16)
+        HEX_KEY=$(echo -n "$SECRET_KEY" | xxd -p -c 256)
+        ENCRYPTED_DATA=$(echo -n "$PLAINTEXT_JSON" | openssl enc -aes-256-cbc -K "$HEX_KEY" -iv "$IV" -base64 -A)
+        
+        echo '{"data":"'$ENCRYPTED_DATA'","iv":"'$IV'"}' > daily-key_comment.json
+
+        # Commit và push file đã mã hóa lên repo
+        git config user.name "github-actions"
+        git config user.email "actions@github.com"
+        git add daily-key_comment.json
+        git commit -m "Auto: Encrypted daily key for $TOMORROW"
         git push
