--- a/.github/workflows/daily_key.yml
+++ b/.github/workflows/daily_key.yml
@@ -27,8 +27,8 @@ jobs:
         fi
         
         # Tạo key cho NGÀY MAI (theo giờ Việt Nam)
-        TOMORROW=$(date -d "+1 day" +%Y%m%d)
-        RAW_KEY="comment_${TOMORROW}_$(openssl rand -hex 6 | tr '[:lower:]' '[:upper:]')"
+        TOMORROW=$(date +%Y%m%d)
+        RAW_KEY="vphuc_${TOMORROW}_$(openssl rand -hex 6 | tr '[:lower:]' '[:upper:]')"
         
         # Lấy link từ một dịch vụ pastebin (ví dụ: paste.ee)
         PASTE_RESPONSE=$(curl -s -X POST "https://api.paste.ee/v1/pastes" \
@@ -66,11 +66,11 @@ jobs:
         HEX_KEY=$(echo -n "$SECRET_KEY" | xxd -p -c 256)
         ENCRYPTED_DATA=$(echo -n "$PLAINTEXT_JSON" | openssl enc -aes-256-cbc -K "$HEX_KEY" -iv "$IV" -base64 -A)
         
-        echo '{"data":"'$ENCRYPTED_DATA'","iv":"'$IV'"}' > daily-key_comment.json
+        echo '{"data":"'$ENCRYPTED_DATA'","iv":"'$IV'"}' > daily-key.json
 
         # Commit và push file đã mã hóa lên repo
         git config user.name "github-actions"
         git config user.email "actions@github.com"
-        git add daily-key_comment.json
+        git add daily-key.json
         git commit -m "Auto: Encrypted daily key for $TOMORROW"
         git push
